--- a/Aqua/App.xaml
+++ b/Aqua/App.xaml
@@ -97,7 +97,7 @@
 
         <Style x:Key="MenuTopButton" TargetType="ToggleButton">
             <Setter Property="Background" Value="#4966cf"/>
-            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Foreground" Value="#f9f9f9"/>
             <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="Width" Value="35"/>
             <Setter Property="Height" Value="35"/>
