--- a/Aqua/MVVM/Views/Store.xaml
+++ b/Aqua/MVVM/Views/Store.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" Background="WhiteSmoke" CornerRadius="5 5 0 0">
+        <Border Grid.Row="0" Background="White" CornerRadius="5 5 0 0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBox x:Name="txtSearch" Margin="0 0 10 0" Height="30" Width="300" Background="WhiteSmoke" Foreground="Black"
                             FontSize="15" HorizontalAlignment="Center"
@@ -29,10 +29,10 @@
                 </TextBox>
                 <TextBlock Text=":" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center" Margin="0 0 5 0"/>
                 <TextBlock Text="جست و جو" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center"/>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#469126" Content="اضافه کردن مصحول جدید" FontSize="11"/>
+                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#469126" Content="اضافه کردن مصحول جدید" FontSize="11" Click="Button_Click"/>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#53ad2b" Content="تازه سازی" FontSize="15"/>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="Red" Content="حذف محصول" FontSize="15"/>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#1067aa" Content="ویرایش مصحول" FontSize="15"/>
+                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="Red" Content="حذف محصول" FontSize="15" Click="Button_Click_1"/>
+                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#1067aa" Content="ویرایش مصحول" FontSize="15" Click="Button_Click_2"/>
             </StackPanel>
 
         </Border>
@@ -40,17 +40,27 @@
         <Border CornerRadius="0 0 5 5 " Background="WhiteSmoke" Grid.Row="1">
             <Border Grid.Column="1" Grid.Row="0" Margin="10 0 10 5">
                 <StackPanel>
-                    <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="membersDataGrid" Height="540" MaxHeight="650">
+                    <DataGrid Style="{StaticResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" Grid.Row="5" x:Name="StoreDataGrid" Height="540" MaxHeight="650" SelectedItem="{Binding Path=SelectedStore, Mode=TwoWay}" SelectionChanged="StoreDataGrid_SelectionChanged">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="توضیحات" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-
-                            <DataGridTextColumn Header="تعداد کالا" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="قیمت کالا" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="نوع کالا" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="کد کالا" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
-                            <DataGridTextColumn Header="نام محصول" IsReadOnly="True" Width="*" Binding="{Binding Number}"/>
-                            <DataGridTextColumn x:Name="ID" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding Date}"/>
+                            <DataGridTextColumn x:Name="ProDescription" Header="توضیحات" IsReadOnly="True" Width="*" Binding="{Binding Description}"/>
+                            <DataGridTextColumn x:Name="ProCount" Header="تعداد کالا" IsReadOnly="True" Width="*" Binding="{Binding CountOfProduct}"/>
+                            <DataGridTextColumn x:Name="ProPrice" Header="قیمت کالا" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
+                            <DataGridTextColumn x:Name="ProType" Header="نوع کالا" IsReadOnly="True" Width="*" Binding="{Binding Productype}"/>
+                            <DataGridTextColumn x:Name="ProCode" Header="کد کالا" IsReadOnly="True" Width="*" Binding="{Binding ProductCode}"/>
+                            <DataGridTextColumn x:Name="ProName" Header="نام محصول" IsReadOnly="True" Width="*" Binding="{Binding ProductName}"/>
+                            <DataGridTextColumn x:Name="ID" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding Id}"/>
                         </DataGrid.Columns>
+                        <DataGrid.RowStyle>
+                            <Style TargetType="DataGridRow">
+                                <Style.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="Background" Value="#02364a"/>
+                                        <Setter Property="Foreground" Value="#ffffff"/>
+                                        <Setter Property="FontFamily" Value="Dirooz FD"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </DataGrid.RowStyle>
                     </DataGrid>
                 </StackPanel>
             </Border>
