--- a/Aqua/MainWindow.xaml
+++ b/Aqua/MainWindow.xaml
@@ -6,9 +6,9 @@
         xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:local="clr-namespace:Aqua"
         mc:Ignorable="d"
-        WindowStyle="None" Height="720" Width="1080" WindowStartupLocation="CenterScreen" Background="Transparent" AllowsTransparency="True">
+        WindowStyle="None" Height="720" Width="1080" WindowStartupLocation="CenterScreen" Background="Transparent">
 
-    <Border Background="#FEFEFA" CornerRadius="15" MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
+    <Border Background="White" CornerRadius="15" MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
