--- a/Aqua/MVVM/Views/StorePages/Store.xaml
+++ b/Aqua/MVVM/Views/StorePages/Store.xaml
@@ -2,12 +2,12 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Aqua.Pages.LoginPage"
       mc:Ignorable="d" 
+      Loaded="Page_Loaded"
       d:DesignHeight="650" d:DesignWidth="1010"
       Title="Store">
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -19,7 +19,7 @@
                 <TextBox x:Name="txtSearch" Margin="0 0 10 0" Height="30" Width="300" Background="WhiteSmoke" Foreground="Black"
                             FontSize="15" HorizontalAlignment="Center"
                             VerticalAlignment="Center" FlowDirection="RightToLeft"
-                            VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" >
+                            VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" TextChanged="txtSearch_TextChanged">
 
                     <TextBox.Resources>
                         <Style TargetType="{x:Type Border}">
@@ -30,7 +30,7 @@
                 <TextBlock Text=":" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center" Margin="0 0 5 0"/>
                 <TextBlock Text="جست و جو" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center"/>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#469126" Content="اضافه کردن مصحول جدید" FontSize="11" Click="Button_Click"/>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#53ad2b" Content="تازه سازی" FontSize="15"/>
+                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#53ad2b" Content="تازه سازی" FontSize="15" Click="Button_Click_3"/>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="Red" Content="حذف محصول" FontSize="15" Click="Button_Click_1"/>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#1067aa" Content="ویرایش مصحول" FontSize="15" Click="Button_Click_2"/>
             </StackPanel>
@@ -40,7 +40,7 @@
         <Border CornerRadius="0 0 5 5 " Background="WhiteSmoke" Grid.Row="1">
             <Border Grid.Column="1" Grid.Row="0" Margin="10 0 10 5">
                 <StackPanel>
-                    <DataGrid Style="{StaticResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" Grid.Row="5" x:Name="StoreDataGrid" Height="540" MaxHeight="650" SelectedItem="{Binding Path=SelectedStore, Mode=TwoWay}" SelectionChanged="StoreDataGrid_SelectionChanged">
+                    <DataGrid Style="{StaticResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" Grid.Row="5" x:Name="StoreDataGrid" Height="540" MaxHeight="650" SelectedItem="{Binding Path=SelectedStore, Mode=TwoWay}" SelectionChanged="StoreDataGrid_SelectionChanged" AutoGenerateColumns="false">
                         <DataGrid.Columns>
                             <DataGridTextColumn x:Name="ProDescription" Header="توضیحات" IsReadOnly="True" Width="*" Binding="{Binding Description}"/>
                             <DataGridTextColumn x:Name="ProCount" Header="تعداد کالا" IsReadOnly="True" Width="*" Binding="{Binding CountOfProduct}"/>
