--- a/Aqua/App.xaml
+++ b/Aqua/App.xaml
@@ -293,12 +293,12 @@
             </Setter>
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#02364a"/>
+                    <Setter Property="Background" Value="#4966cf"/>
                     <Setter Property="Foreground" Value="#ffffff"/>
                 </Trigger>
 
                 <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Background" Value="#02364a"/>
+                    <Setter Property="Background" Value="#4966cf"/>
                     <Setter Property="Foreground" Value="#ffffff"/>
                 </Trigger>
 
