--- a/Aqua/MainWindow.xaml
+++ b/Aqua/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         WindowStyle="None" Height="720" Width="1080" WindowStartupLocation="CenterScreen" Background="Transparent">
 
-    <Border Background="White" CornerRadius="15" MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
+    <Border Background="White" MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -17,7 +17,7 @@
 
             <Border Grid.Column="1"
              Background="#4966cf"
-             CornerRadius="0 15 15 0">
+             CornerRadius="0">
                 <Grid x:Name="GridNav" Width="70">
 
                     <StackPanel Grid.Row="1" Margin="10 -5 0 0">
