--- a/Aqua/MVVM/Views/AssestPages/AssestAddOrEdite.xaml
+++ b/Aqua/MVVM/Views/AssestPages/AssestAddOrEdite.xaml
@@ -34,7 +34,7 @@
                 <TextBox x:Name="txtAssestPrice" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
       FontSize="15" HorizontalAlignment="Center"
       VerticalAlignment="Center" FlowDirection="RightToLeft"
-      VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a">
+      VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" PreviewTextInput="txtAssestPrice_PreviewTextInput">
                     <TextBox.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="10"/>
