--- a/Aqua/MVVM/Views/StorePages/StoreAddOrUpdate.xaml
+++ b/Aqua/MVVM/Views/StorePages/StoreAddOrUpdate.xaml
@@ -70,7 +70,7 @@
             <TextBox x:Name="txtProductPrice" Margin="0 10 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
               FontSize="15" HorizontalAlignment="Center"
               VerticalAlignment="Center" FlowDirection="RightToLeft"
-              VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a">
+              VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" PreviewTextInput="txtProductPrice_PreviewTextInput">
                 <TextBox.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="10"/>
@@ -81,7 +81,7 @@
             <TextBox x:Name="txtProductCount" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
               FontSize="15" HorizontalAlignment="Center"
               VerticalAlignment="Center" FlowDirection="RightToLeft"
-              VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a">
+              VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" PreviewTextInput="txtProductCount_PreviewTextInput">
                 <TextBox.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="10"/>
