--- a/Aqua/MVVM/Views/BankAccountPages/BankAccAddOrUpdate.xaml
+++ b/Aqua/MVVM/Views/BankAccountPages/BankAccAddOrUpdate.xaml
@@ -5,8 +5,81 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Aqua.MVVM.Views.BankAccountPages"
         mc:Ignorable="d"
-        Title="BankAccAddOrUpdate" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Height="200" Width="665" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Loaded="Window_Loaded">
+    <Border CornerRadius="5" Background="#edfefa">
+        <Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="3" Margin="0 20 0 0">
+                    <Label Content=": نام حساب بانکی" Margin="0 10 0 0" FontFamily="Dirooz FD" Foreground="Red"/>
+                    <Label Content=": نام شعبه بانک" Margin="0 30 0 0" FontFamily="Dirooz FD" Foreground="Red"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="2" Margin="0 20 0 0">
+                    <TextBox x:Name="txtBankname" Margin="0 10 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
+    FontSize="15" HorizontalAlignment="Center"
+    VerticalAlignment="Center" FlowDirection="RightToLeft"
+    VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a">
+                        <TextBox.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
+
+                    <TextBox x:Name="txtBankBranchName" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
+FontSize="15" HorizontalAlignment="Center"
+VerticalAlignment="Center" FlowDirection="RightToLeft"
+VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a">
+                        <TextBox.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
+
+                    <Button x:Name="btnSave" Grid.Column="2" Width="113" Height="40" Margin="0,15,0,0" Style="{StaticResource ButtonStyle}" Background="Green" Content="افزودن حساب بانکی" Foreground="White" FontFamily="Dirooz FD" Click="btnSave_Click"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" Margin="0 20 20 0">
+                    <Label Content=": شماره حساب" Margin="0 10 0 0" FontFamily="Dirooz FD" Foreground="Red"/>
+                    <Label Content=": مبلغ باقی مانده" Margin="0 30 0 0" FontFamily="Dirooz FD" Foreground="Red"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="0" Margin="45 20 0 0">
+                    <TextBox x:Name="txtBanAccNum" Margin="0 10 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
+    FontSize="15" HorizontalAlignment="Center"
+    VerticalAlignment="Center" FlowDirection="RightToLeft"
+    VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" PreviewTextInput="txtCustomePhoneNumber_PreviewTextInput">
+                        <TextBox.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
+
+                    <TextBox x:Name="txtBankBalance" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
+FontSize="15" HorizontalAlignment="Center"
+VerticalAlignment="Center" FlowDirection="RightToLeft"
+VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" PreviewTextInput="txt_PreviewTextInput" Language="fa-IR">
+                        <TextBox.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
+
+                    <Button Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100" Height="40" Margin="0,15,0,0" Style="{StaticResource ButtonStyle}" Background="Red" Content="بستن" Foreground="White" FontFamily="Dirooz FD" Click="Button_Click"/>
+
+                </StackPanel>
+
+            </Grid>
+        </Grid>
+    </Border>
 </Window>
