--- a/Aqua/MVVM/Views/BankChekPages/ChekPage.xaml
+++ b/Aqua/MVVM/Views/BankChekPages/ChekPage.xaml
@@ -29,7 +29,7 @@
                 </TextBox>
                 <TextBlock Text=":" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center" Margin="0 0 5 0"/>
                 <TextBlock Text="جست و جو" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center"/>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#469126" Content="اضافه کردن چک جدید" FontSize="11"/>
+                <Button x:Name="btnAdd" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#469126" Content="اضافه کردن چک جدید" FontSize="11" Click="btnAdd_Click"/>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#53ad2b" Content="تازه سازی" FontSize="15"/>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="Red" Content="حذف چک" FontSize="15"/>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#1067aa" Content="ویرایش چک" FontSize="15"/>
@@ -42,13 +42,14 @@
                 <StackPanel>
                     <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="ChekDataGrid" Height="540" MaxHeight="650">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="توضیحات" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-
-                            <DataGridTextColumn Header="در وجه" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="مبلغ چک" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="بانک چک" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
-                            <DataGridTextColumn Header="شماره چک" IsReadOnly="True" Width="*" Binding="{Binding Number}"/>
-                            <DataGridTextColumn x:Name="ID" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding Date}"/>
+                            <DataGridTextColumn Header="توضیحات" IsReadOnly="True" Width="*" Binding="{Binding Descriptions}"/>
+                            <DataGridTextColumn Header="تاریخ سر رسید" IsReadOnly="True" Width="*" Binding="{Binding DueDateSTR}"/>
+                            <DataGridTextColumn Header="تاریخ صدور" IsReadOnly="True" Width="*" Binding="{Binding IssueDtaeSTR}"/>
+                            <DataGridTextColumn Header="واگذاری" IsReadOnly="True" Width="*" Binding="{Binding Assignment}"/>
+                            <DataGridTextColumn Header="مبلغ چک" IsReadOnly="True" Width="*" Binding="{Binding ChekPrice}"/>
+                            <DataGridTextColumn Header="بانک چک" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
+                            <DataGridTextColumn Header="شماره چک" IsReadOnly="True" Width="*" Binding="{Binding ChekNumber}"/>
+                            <DataGridTextColumn x:Name="ID" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding Id}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
