--- a/Aqua/MVVM/Views/StorePages/StoreAddOrUpdate.xaml
+++ b/Aqua/MVVM/Views/StorePages/StoreAddOrUpdate.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Aqua.MVVM.Views"
         mc:Ignorable="d" Height="250" Width="600" WindowStartupLocation="CenterScreen"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         WindowStyle="None" AllowsTransparency="True" Background="#edfefa" Loaded="Window_Loaded">
     
     <Grid>
@@ -67,27 +68,27 @@
         </StackPanel>
 
         <StackPanel Grid.Column="0" Margin="45 20 0 0">
-            <TextBox x:Name="txtProductPrice" Margin="0 10 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
+            <xctk:IntegerUpDown x:Name="txtProductPrice" Margin="0 10 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
               FontSize="15" HorizontalAlignment="Center"
               VerticalAlignment="Center" FlowDirection="RightToLeft"
               VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" Language="fa-IR">
-                <TextBox.Resources>
+                <xctk:IntegerUpDown.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="10"/>
                     </Style>
-                </TextBox.Resources>
-            </TextBox>
+                </xctk:IntegerUpDown.Resources>
+            </xctk:IntegerUpDown>
 
-            <TextBox x:Name="txtProductCount" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
+            <xctk:IntegerUpDown x:Name="txtProductCount" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
               FontSize="15" HorizontalAlignment="Center"
               VerticalAlignment="Center" FlowDirection="RightToLeft"
               VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" Language="fa-IR">
-                <TextBox.Resources>
+                <xctk:IntegerUpDown.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="10"/>
                     </Style>
-                </TextBox.Resources>
-            </TextBox>
+                </xctk:IntegerUpDown.Resources>
+            </xctk:IntegerUpDown>
 
             <TextBox x:Name="txtProductDescriptions" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
       FontSize="15" HorizontalAlignment="Center"
