Add And Compilit the Invoice Feature(Exepct Connect Bak to Front)

--- a/Aqua/MVVM/Views/InvoicesPages/AllInvoices.xaml
+++ b/Aqua/MVVM/Views/InvoicesPages/AllInvoices.xaml
@@ -5,10 +5,51 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Aqua.MVVM.Views.InvoicesPages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="650" d:DesignWidth="1010"
       Title="AllInvoices">
-
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Border Grid.Row="0" Background="WhiteSmoke" CornerRadius="5 5 0 0">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <TextBox x:Name="txtSearch" Margin="0 0 10 0" Height="30" Width="300" Background="WhiteSmoke" Foreground="Black"
+                     FontSize="15" HorizontalAlignment="Center"
+                     VerticalAlignment="Center" FlowDirection="RightToLeft"
+                     VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontFamily="Dirooz FD" BorderBrush="#3a3a3a">
+
+                    <TextBox.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="10"/>
+                        </Style>
+                    </TextBox.Resources>
+                </TextBox>
+                <TextBlock Text=":" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center" Margin="0 0 5 0"/>
+                <TextBlock Text="جست و جو" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center"/>
+                <Button x:Name="btnSave" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#469126" Content="ثبت فاکتور خرید" FontSize="11" />
+                <Button x:Name="btnRefresh" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#53ad2b" Content="ثبت فاکتور فروش" FontSize="15"/>
+                <Button x:Name="btnDelet" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="Red" Content="حذف فاکتور" FontSize="15"/>
+                <Button x:Name="btnEdite" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#1067aa" Content="ویرایش فاکتور" FontSize="15"/>
+            </StackPanel>
+
+        </Border>
+
+        <Border CornerRadius="0 0 5 5 " Background="WhiteSmoke" Grid.Row="1">
+            <Border Grid.Column="1" Grid.Row="0" Margin="10 0 10 5">
+                <StackPanel>
+                    <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" Grid.Row="5" x:Name="CustomerDataGrid" Height="540" MaxHeight="650" RowStyle="{DynamicResource DataGridRowStyle1}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="تاریخ" IsReadOnly="True" Width="*" Binding="{Binding PhoneNumber}"/>
+                            <DataGridTextColumn Header="نام کارشناس" IsReadOnly="True" Width="*" Binding="{Binding SubCode}"/>
+                            <DataGridTextColumn Header="نام" IsReadOnly="True" Width="*" Binding="{Binding Family}"/>
+                            <DataGridTextColumn Header="مبلغ کل" IsReadOnly="True" Width="*" Binding="{Binding Name}"/>
+                            <DataGridTextColumn x:Name="ID" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding Id}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </StackPanel>
+            </Border>
+        </Border>
     </Grid>
 </Page>
